--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.6
   google_fonts: ^6.1.0
+  form_validator: ^2.1.1
+  form_field_validator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
