--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   google_sign_in: ^6.1.5
   firebase_core: ^2.17.0
   cloud_firestore: ^4.9.3
-  pin_code_fields: ^8.0.1
+  flutter_pin_code_fields: ^1.1.0
 
 dev_dependencies:
   flutter_test:
