--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cloud_firestore: ^4.9.3
   flutter_pin_code_fields: ^1.1.0
   card_swiper: ^3.0.1
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
