--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,10 @@ dependencies:
   flutter_pin_code_fields: ^1.1.0
   card_swiper: ^3.0.1
   flutter_svg: ^2.0.7
-
+  image_picker:
+  loading_animation_widget:
+  fluttertoast:
+  firebase_storage:
 dev_dependencies:
   flutter_test:
     sdk: flutter
