--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   loading_animation_widget:
   fluttertoast:
   firebase_storage:
+  geolocator:
+  geocoding:
 dev_dependencies:
   flutter_test:
     sdk: flutter
