--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,10 @@ dependencies:
   firebase_storage:
   geolocator:
   geocoding:
+  linear_step_indicator: ^1.0.0+3
+  dotted_line: ^3.2.2
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
