--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   firebase_storage:
   geolocator:
   geocoding:
+  dotted_line: ^3.2.2
+  flutter_rating_bar: ^4.0.1
+  percent_indicator: ^4.2.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
