--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,8 +56,10 @@ dependencies:
   dotted_line: ^3.2.2
   flutter_rating_bar: ^4.0.1
   percent_indicator: ^4.2.3
+  google_maps_flutter: ^2.5.0
+  google_places_flutter: ^2.0.6
   table_calendar: ^3.0.9
-
+  google_api_headers: ^2.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
