--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   intl:
   firebase_database: ^10.3.3
   firebase_messaging: ^14.7.3
+  flutter_local_notifications: ^16.1.0
 
 
 dev_dependencies:
