--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,7 @@ dependencies:
   intl:
   firebase_database: ^10.3.3
   firebase_messaging: ^14.7.3
-
+  url_launcher:
 
 dev_dependencies:
   flutter_test:
