--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,9 @@ dependencies:
   firebase_messaging: ^14.7.3
   url_launcher:
   intl_phone_field: ^3.2.0
+  cloud_functions:
+  email_auth:
+  email_otp:
 dev_dependencies:
   flutter_test:
     sdk: flutter
