--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,8 @@ dependencies:
   cloud_functions:
   email_auth:
   email_otp:
+  cached_network_image:
+  image_cropper: ^5.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
