--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,10 @@ dependencies:
   google_fonts: ^6.1.0
   form_validator: ^2.1.1
   form_field_validator: ^1.1.0
-  firebase_auth: ^4.10.1
+  firebase_auth: ^4.14.0
   google_sign_in: ^6.1.5
-  firebase_core: ^2.17.0
-  cloud_firestore: ^4.9.3
+  firebase_core: ^2.22.0
+  cloud_firestore: ^4.13.1
   flutter_pin_code_fields: ^1.1.0
   card_swiper: ^3.0.1
   flutter_svg: ^2.0.7
@@ -52,7 +52,7 @@ dependencies:
   firebase_storage:
   geolocator:
   geocoding:
-  geoflutterfire: ^3.0.3
+  geoflutterfire2: ^2.3.15
   dotted_line: ^3.2.2
   flutter_rating_bar: ^4.0.1
   percent_indicator: ^4.2.3
@@ -70,6 +70,7 @@ dependencies:
   email_otp:
   cached_network_image:
   image_cropper: ^5.0.0
+  firebase_core_web: ^2.8.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
