--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,10 +67,12 @@ dependencies:
   intl_phone_field: ^3.2.0
   cloud_functions:
   email_auth:
-  email_otp:
+  email_otp: ^2.1.1
   cached_network_image:
   image_cropper: ^5.0.0
   firebase_core_web: ^2.8.1
+  firebase_messaging_web: ^3.5.14
+  google_maps_flutter_web: ^0.5.4+2
 dev_dependencies:
   flutter_test:
     sdk: flutter
