--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,8 @@ dependencies:
   firebase_core_web: ^2.8.1
   firebase_messaging_web: ^3.5.14
   google_maps_flutter_web: ^0.5.4+2
+  file_picker:
+  mailer:
 dev_dependencies:
   flutter_test:
     sdk: flutter
