--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.1 <4.0.0'
+  sdk: '>=3.1.1 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -66,7 +66,6 @@ dependencies:
   url_launcher:
   intl_phone_field: ^3.2.0
   cloud_functions:
-  email_auth:
   email_otp: ^2.1.1
   cached_network_image:
   image_cropper: ^5.0.0
@@ -74,7 +73,11 @@ dependencies:
   firebase_messaging_web: ^3.5.14
   google_maps_flutter_web: ^0.5.4+2
   file_picker:
-  mailer:
+  http: ^1.1.0
+  flutter_paypal:
+    git:
+      url: https://github.com/DevenAndroid/flutter_paypal_custom_plugin.git
+      ref: latest
 dev_dependencies:
   flutter_test:
     sdk: flutter
