--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   firebase_messaging_web: ^3.5.14
   google_maps_flutter_web: ^0.5.4+2
   shared_preferences: ^2.2.2
+  permission_handler: ^10.4.0
   file_picker:
   http: ^1.1.0
 #  youcanpay_sdk: ^0.0.4
