--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,10 @@ dependencies:
   google_maps_flutter_web: ^0.5.4+2
   file_picker:
   http: ^1.1.0
+  uni_links: ^0.5.0
+  shared_preferences:
+  webview_flutter: ^4.2.0
+#  webview_flutter_web: ^0.1.0+4
 #  youcanpay_sdk: ^0.0.4
   flutter_paypal:
     git:
