--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,8 +77,10 @@ dependencies:
   uni_links: ^0.5.0
   shared_preferences:
   webview_flutter: ^4.2.0
-#  webview_flutter_web: ^0.1.0+4
-#  youcanpay_sdk: ^0.0.4
+  carousel_slider: ^4.2.1
+  flutter_animate: ^4.3.0
+#  flutter_google_places_hoc081098: ^1.2.0
+#  google_maps_webservice: ^0.0.19
   flutter_paypal:
     git:
       url: https://github.com/DevenAndroid/flutter_paypal_custom_plugin.git
