--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,7 +26,7 @@ if (flutterVersionName == null) {
 
 android {
     namespace "com.resvago.customer"
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -69,6 +69,8 @@ flutter {
 }
 
 dependencies {
+    implementation "androidx.webkit:webkit:1.8.0"
+    implementation "androidx.browser:browser:1.6.0"
     implementation(platform("com.google.firebase:firebase-bom:32.3.1"))
     implementation 'com.google.firebase:firebase-core:21.1.1'
     implementation "com.google.firebase:firebase-auth:22.1.2"
