--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,7 @@ dependencies:
   intl:
   firebase_database: ^10.3.3
   firebase_messaging: ^14.7.3
-  url_launcher:
+  url_launcher: ^6.2.4
   intl_phone_field: ^3.2.0
   cloud_functions:
   email_otp: ^2.1.1
@@ -77,19 +77,17 @@ dependencies:
   http: ^1.1.0
   uni_links: ^0.5.0
   shared_preferences:
-  webview_flutter: ^4.2.0
+#  webview_flutter: ^4.2.0
   carousel_slider: ^4.2.1
   flutter_animate: ^4.3.0
-  flutter_stripe: ^7.0.0
+  flutter_stripe: ^9.5.0+1
+  flutter_stripe_web: ^4.4.0
   flutter_inappwebview: ^6.0.0
   qr_flutter: ^4.1.0
   screenshot: ^2.1.0
   open_filex: ^4.3.4
   path_provider: ^2.1.2
   flutter_launcher_icons: ^0.13.1
-
-#  flutter_google_places_hoc081098: ^1.2.0
-#  google_maps_webservice: ^0.0.19
   flutter_paypal:
     git:
       url: https://github.com/DevenAndroid/flutter_paypal_custom_plugin.git
