--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   http: ^1.1.0
   uni_links: ^0.5.0
   shared_preferences:
+  flutter_paypal_sdk: ^0.0.1
 #  webview_flutter: ^4.2.0
   carousel_slider: ^4.2.1
   flutter_animate: ^4.3.0
@@ -88,11 +89,13 @@ dependencies:
   open_filex: ^4.3.4
   path_provider: ^2.1.2
   flutter_launcher_icons: ^0.13.1
+  sqflite:
   flutter_paypal:
     git:
       url: https://github.com/DevenAndroid/flutter_paypal_custom_plugin.git
       ref: latest
 dev_dependencies:
+  flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
 flutter_icons:
